solve : Heap1424, 1942